fix swagger attribute for files
